syntax = "proto3";
option go_package = "grpc";

package grpc;

service API {
  rpc CreateRule(CreateRuleRequest) returns (CreateRuleResponse) {}
  rpc RemoveRule(RemoveRuleRequest) returns (RemoveRuleResponse) {}
  rpc ListRules(ListRulesRequest) returns (ListRulesResponse) {}
  rpc LiveTrace(LiveTraceRequest) returns (Event) {}
}

message CreateRuleRequest {
  Rule rule = 2; // the rule to be created
}

message CreateRuleResponse {
}

message RemoveRuleRequest {
  string name = 1; // Name of rule
  string program = 2; // Name of program
}

message RemoveRuleResponse {
}

message ListRulesRequest {
}

message Rule {
  string name = 1; // Name of rule
  string program = 2; // Name of program
  map<string, Filter> filterEvents = 3; // Filters for the events
  repeated string containerRuntimes = 4; // Container runtimes to apply the rule to
}

message Filter {
  repeated string values = 1; // Values for the filter
}

message ListRulesResponse {
  repeated Rule rules = 1; // List of rules
}

message Event {
  uint32 PID = 1;
  uint32 TGID = 2;
  map<string, string> data = 3;
  string containerID = 4; // Filled in after the program is run so you don't need to.
  string containerRuntime = 5; // Filled in after the program is run so you don't need to.
  string program = 6; // Filled in after the program is run so you don't need to.
}

message LiveTraceRequest {
}
